tests/requests/invalid/006.py
from gunicorn.ghttp.errors import LimitRequestLine
request = LimitRequestLine
